--- a/www/templates/menu2.html
+++ b/www/templates/menu2.html
@@ -11,7 +11,7 @@
 					<img ng-click="showProductInfo(menu[$index].$id)" ng-src="{{'img/fk/'+ menu[$index].image +'.jpg'}}" width="100%" />
 				  </div>
 
-				  <a class="item item-icon-right assertive" href="#"  style="border-width: 0px; border-style: none;" >
+				  <a class="item item-icon-right assertive" href="javascript:void(0)"  style="border-width: 0px; border-style: none;" >
 					<p ng-click="showProductInfo(menu[$index].$id)" style="font-size: 12px;text-align:left;">
             {{menu[$index].name}} <br/>
 						<span style="font-weight: bold;color: black;">&#8377; {{menu[$index].price}}</span>
@@ -28,7 +28,7 @@
 					<img ng-click="showProductInfo(menu[$index+1].$id)" ng-src="{{'img/fk/'+ menu[$index+1].image +'.jpg'}}" width="100%" />
 				  </div>
 
-				  <a class="item item-icon-right assertive" href="#"  style="border-width: 0px; border-style: none;" >
+				  <a class="item item-icon-right assertive" href="javascript:void(0)"  style="border-width: 0px; border-style: none;" >
 					<p ng-click="showProductInfo(menu[$index+1].$id)" style="font-size: 12px;text-align:left;">
             {{menu[$index+1].name}} <br/>
 						<span style="font-weight: bold;color: black;">&#8377; {{menu[$index+1].price}}</span>
